Style Fix: aligning rating component in movie details component

--- a/src/app/movies/detail-movie/detail-movie.component.css
+++ b/src/app/movies/detail-movie/detail-movie.component.css
@@ -40,3 +40,7 @@ section.actors-section .container .dots {
   display: inline-block;
   width: 45px;
 }
+
+app-rating {
+  vertical-align: middle;
+}
